--- a/style.scss
+++ b/style.scss
@@ -60,6 +60,10 @@ body {
       margin-bottom: 5px;
       font-size: 14px;
     }
+    p{
+      margin-top: 20px;
+      font-size: 14px;
+    }
   }
 }
 
