--- a/css/style.css
+++ b/css/style.css
@@ -79,10 +79,33 @@ body {
 .products .product-box span {
   display: block;
   text-align: center;
+  font-size: 16px;
+  width: 55px;
 }
 .products .product-box select {
   width: 50px;
   margin-top: 5px;
+}
+.products .product-box .group {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+.products .product-box .item {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.products .product-box .item .img-btn {
+  border: none;
+  padding: 0;
+  width: 20px;
+  height: 20px;
+  background-color: #fff;
+}
+.products .product-box .item .img-btn ion-icon {
+  width: 100%;
+  height: 100%;
 }
 
 .order-box {
@@ -90,4 +113,8 @@ body {
   text-align: center;
   display: flex;
   justify-content: space-around;
+}
+
+.modal-body img {
+  width: 100%;
 }/*# sourceMappingURL=style.css.map */
