--- a/takesh-cn/css/style.css
+++ b/takesh-cn/css/style.css
@@ -63,11 +63,11 @@ body {
   height: 0;
 }
 .products .product-box {
-  padding: 10px 10px;
+  padding: 10px 20px;
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: end;
+  align-items: center;
   border: 1px solid rgb(42, 98, 255);
   border-radius: 5px;
   margin-bottom: 5px;
@@ -75,7 +75,6 @@ body {
 .products .product-box h5 {
   margin: 0;
   font-size: 18px;
-  text-align: center;
 }
 .products .product-box span {
   display: block;
@@ -87,20 +86,26 @@ body {
   width: 50px;
   margin-top: 5px;
 }
-.products .product-box .item .img-btn {
-  border: none;
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin-bottom: 10px;
-}
-.products .product-box .item .img-btn img {
-  width: 100%;
-}
 .products .product-box .group {
   display: flex;
   flex-direction: column;
   align-items: end;
+}
+.products .product-box .item {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.products .product-box .item .img-btn {
+  border: none;
+  padding: 0;
+  width: 20px;
+  height: 20px;
+  background-color: #fff;
+}
+.products .product-box .item .img-btn ion-icon {
+  width: 100%;
+  height: 100%;
 }
 
 .order-box {
@@ -110,13 +115,6 @@ body {
   justify-content: space-around;
 }
 
-.modal-body {
-  padding: 10px;
-}
 .modal-body img {
   width: 100%;
-}
-.modal-body .modal-direction {
-  margin-top: 10px;
-  padding: 10px;
 }/*# sourceMappingURL=style.css.map */
